--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -10,20 +10,22 @@
                     <a href="/" class="btn btn-primary">index</a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row border">
                 <form action="/stock" method="get">
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-2">
                             Stock area: 
                         </div>
-                        <div class="col-11">
+                        <div class="col-10">
                             <input type="text" name="area" class="form-control">
                         </div>
+                    </div>
 
-                        <div class="col-1">
-                            Shelf: 
+                    <div class="row">
+                        <div class="col-2">
+                            Stock Shelf: 
                         </div>
-                        <div class="col-11">
+                        <div class="col-10">
                             <input type="text" name="name" class="form-control">
                         </div>
 
@@ -33,25 +35,36 @@
                             id:
                         </div>
                         <div class="col-11">
-                            <input type="radio" name="stock_id" value="1">asc<br>
+                            <input type="radio" name="stock_id" value="1">asc
                             <input type="radio" name="stock_id" value="-1">desc
                         </div>
                     </div>
-                    <input type="submit" value="submit">
+                    <input type="submit" value="submit" class="btn btn-primary">
                 </form>
             </div>
-
             <div class="row my-1 border-bottom border-dark">
-                <div class="col fw-bold fs-5 text-center">
+                <div class="col-3">
+
+                </div>
+                <div class="col-6 fw-bold fs-5 text-center">
+                    stock
+                </div>
+                <div class="col-3">
+
+                </div>
+            </div>
+
+            <div class="row my-1 border-bottom border-dark bg-secondary-subtle">
+                <div class="col-3 fw-bold fs-5 text-center">
                     id
                 </div>
-                <div class="col fw-bold fs-5 text-center">
-                    stock area
+                <div class="col-3 fw-bold fs-5 text-center">
+                    area
                 </div>
-                <div class="col fw-bold fs-5 text-center">
-                    stock shelf
+                <div class="col-3 fw-bold fs-5 text-center">
+                    shelf
                 </div>
-                <div class="col fw-bold fs-5 text-center">
+                <div class="col-3 fw-bold fs-5 text-center">
                     edit
                 </div>
             </div>
