--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -10,8 +10,9 @@
                     <a href="/" class="btn btn-primary">index</a>
                 </div>
             </div>
-            <div class="row border">
-                <form action="/stock" method="get">
+            <div class="row">
+                <label class="fs-4">Search data:</label>
+                <form action="/stock" method="get" class="border m-1">
                     <div class="row">
                         <div class="col-2">
                             Stock area: 
@@ -28,17 +29,18 @@
                         <div class="col-10">
                             <input type="text" name="name" class="form-control">
                         </div>
-
                     </div>
+
                     <div class="row">
-                        <div class="col-1">
+                        <div class="col-2">
                             id:
                         </div>
-                        <div class="col-11">
+                        <div class="col-10">
                             <input type="radio" name="stock_id" value="1">asc
                             <input type="radio" name="stock_id" value="-1">desc
                         </div>
                     </div>
+
                     <input type="submit" value="submit" class="btn btn-primary">
                 </form>
             </div>
@@ -81,7 +83,10 @@
                     </div>
                     <div class="col text-center">
                         <a href="/stock/info?stock_id=<%= data._id %>" class="btn btn-primary">edit</a>
-                        <a href="/stock/delete?stock_id=<%= data._id %>" class="btn btn-warning">delete</a>   
+                        <form action="/stock/delete" method="post" class="d-inline">
+                            <input type="text" value="<%= data._id %>" name="stock_id" hidden />
+                            <input type="submit" class="btn btn-warning" value="delete">   
+                        </form>
                     </div>
                 </div>
             <% } %>
