--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -7,13 +7,14 @@
 </head>
 <body>
     <h1>Stock Enquiry</h1>
-    <form action="/stock" method="get">
+    <form action="/stock" method="post">
+        <input type="text" name="_id" value="<%= stock_data._id %>" hidden>
         <div>
             <div>
-                <label for="product_id">Product ID:</label>
+                <label for="stock_id">Stock ID:</label>
             </div>
             <div>
-                <input type="text" id="stock_id" name="stock_id" required><br><br>
+                <input type="text" id="stock_id" name="stock_id" value="<%= stock_data.stock_id %>" required>
             </div>
         </div>
         <div>
@@ -21,14 +22,19 @@
                 <label for="area">Region : </label> 
             </div>
             <div>
-                <input type="text" id="area" name="area"> 
+                <input type="text" id="area" name="area" value="<%= stock_data.area %>" required> 
             </div>
         </div>
-
-        <label for="location"> Store location : </label> 
-        <input type="text" id="name" name="name"><br>
+        <div>
+            <div>
+                <label for="name"> Store location : </label>
+            </div>
+            <div>
+                <input type="text" id="name" name="name" value="<%= stock_data.name %>" required>
+            </div>
+        </div>
+        
         <button type="submit"> Store at </button>
-
     </form>
 
     <!-- Display stock information here -->
