--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Stock Enquiry</h1>
-    <form action="/stock" method="post">
+    <form action="/stock/save" method="post">
         <input type="text" name="_id" value="<%= stock_data._id %>" hidden>
         <div>
             <div>
