update view and delete console.log

--- a/views/deliveryOrder/index.ejs
+++ b/views/deliveryOrder/index.ejs
@@ -11,73 +11,73 @@
                 <form action="/deliveryOrder" method="get" class="border m-1">
                     <div class="row">
                         <div class="col-2">
-                            Delivery Id: 
+                            <label for="delivery_id">Delivery Id: </label>
                         </div>
                         <div class="col-10">
-                            <input type="text" name="delivery_id" class="form-control">
+                            <input type="text" id="delivery_id" name="delivery_id" class="form-control" placeholder="Delivery Id">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Company: 
+                            <label for="company">Company:</label> 
                         </div>
                         <div class="col-10">
-                            <input type="text" name="company" class="form-control">
+                            <input type="text" id="company" name="company" class="form-control" placeholder="Company">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Address: 
+                            <label for="address">Address:</label> 
                         </div>
                         <div class="col-10">
-                            <input type="text" name="address" class="form-control">
+                            <input type="text" id="address" name="address" class="form-control" placeholder="Address">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Phone: 
+                            <label for="phone">Phone:</label> 
                         </div>
                         <div class="col-10">
-                            <input type="text" name="phone" class="form-control">
+                            <input type="text" id="phone" name="phone" class="form-control" placeholder="Phone">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Delivery Type: 
+                            <label for="type">Delivery Type:</label> 
                         </div>
                         <div class="col-10">
-                            <input type="text" name="type" class="form-control">
+                            <input type="text" id="type" name="type" class="form-control" placeholder="Delivery Type">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Delivery Check: 
+                            <label for="delivery_check">Delivery Check:</label> 
                         </div>
                         <div class="col-10">
-                            <input type="text" name="delivery_check" class="form-control">
+                            <input type="text" id="delivery_check" name="delivery_check" class="form-control" placeholder="Delivery Check">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Delivery User: 
+                            <label for="delivery_user">Delivery User: </label>
                         </div>
                         <div class="col-10">
-                            <input type="text" name="delivery_user" class="form-control">
+                            <input type="text" id="delivery_user" name="delivery_user" class="form-control" placeholder="Delivery User">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Delivery At: 
+                            <label for="delivery_at">Delivery At:</label> 
                         </div>
                         <div class="col-10">
-                            <input type="text" name="delivery_at" class="form-control">
+                            <input type="text" id="delivery_at" name="delivery_at" class="form-control" placeholder="Delivery At">
                         </div>
                     </div>
 
@@ -86,8 +86,8 @@
                             id:
                         </div>
                         <div class="col-10">
-                            <input type="radio" name="id" value="1">asc
-                            <input type="radio" name="id" value="-1">desc
+                            <input type="radio" name="id" value="1">Asc
+                            <input type="radio" name="id" value="-1">Desc
                         </div>
                     </div>
 
