--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -14,7 +14,7 @@
                 <label for="stock_id">Stock ID:</label>
             </div>
             <div>
-                <input type="text" id="stock_id" name="stock_id" value="<%= stock_data.stock_id %>" required>
+                <input type="text" id="stock_id" name="stock_id" value="<%= stock_data.stock_id %>" placeholder="Stock ID" required>
             </div>
         </div>
         <div>
@@ -22,7 +22,7 @@
                 <label for="area">Region : </label> 
             </div>
             <div>
-                <input type="text" id="area" name="area" value="<%= stock_data.area %>" required> 
+                <input type="text" id="area" name="area" value="<%= stock_data.area %>" placeholder="Region" required> 
             </div>
         </div>
         <div>
@@ -30,7 +30,7 @@
                 <label for="name"> Store location : </label>
             </div>
             <div>
-                <input type="text" id="name" name="name" value="<%= stock_data.name %>" required>
+                <input type="text" id="name" name="name" value="<%= stock_data.name %>" placeholder="Store location" required>
             </div>
         </div>
         
