--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -26,7 +26,7 @@
                     <label for="user_id">User Id:</label>
                 </div>
                 <div class="col">
-                    <input type="text" id="user_id" name="user_id" class="form-control" value="<%= data.user_id %>">
+                    <input type="text" id="user_id" name="user_id" class="form-control" value="<%= data.user_id %>" placeholder="user Id">
                 </div>
             </div>
 
@@ -35,7 +35,7 @@
                     <label for="username">Username:</label>
                 </div>
                 <div class="col">
-                    <input type="text" id="username" name="username" class="form-control" value="<%= data.username %>">
+                    <input type="text" id="username" name="username" class="form-control" value="<%= data.username %>" placeholder="username">
                 </div>
             </div>
 
@@ -44,7 +44,7 @@
                     <label for="password">Password:</label>
                 </div>
                 <div class="col">
-                    <input type="password" id="password" name="password" class="form-control">
+                    <input type="password" id="password" name="password" class="form-control" placeholder="password">
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                     <label for="confirm_password">Confirm Password:</label>
                 </div>
                 <div class="col">
-                    <input type="password" id="confirm_password" name="confirm_password" class="form-control">
+                    <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="confirm password">
                 </div>
             </div>
 
@@ -62,7 +62,7 @@
                     <label for="name">name:</label>
                 </div>
                 <div class="col">
-                    <input type="text" id="name" name="name" class="form-control" value="<%= data.name %>">
+                    <input type="text" id="name" name="name" class="form-control" value="<%= data.name %>" placeholder="name">
                 </div>
             </div>
 
