--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -15,29 +15,29 @@
                 <form action="/stock" method="get" class="border m-1">
                     <div class="row">
                         <div class="col-2">
-                            Stock area: 
+                            <label for="area">Stock area:</label>
                         </div>
                         <div class="col-10">
-                            <input type="text" name="area" class="form-control">
+                            <input type="text" id="area" name="area" class="form-control" placeholder="Stock Area">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            Stock Shelf: 
+                            <label for="name">Stock Shelf:</label>
                         </div>
                         <div class="col-10">
-                            <input type="text" name="name" class="form-control">
+                            <input type="text" id="name" name="name" class="form-control" placeholder="Stock Shelf">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-2">
-                            id:
+                            <label>id:</label>
                         </div>
                         <div class="col-10">
-                            <input type="radio" name="stock_id" value="1">asc
-                            <input type="radio" name="stock_id" value="-1">desc
+                            <input type="radio" name="stock_id" value="1">Asc
+                            <input type="radio" name="stock_id" value="-1">Desc
                         </div>
                     </div>
 
