--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -20,7 +20,7 @@
                         <label for="username">Username:</label>
                     </div>
                     <div class="col-8">
-                        <input type="text" id="username" name="username" class="form-control">
+                        <input type="text" id="username" name="username" class="form-control" placeholder="username">
                     </div>
                 </div>
 
@@ -29,7 +29,7 @@
                         <label for="password">Password:</label>
                     </div>
                     <div class="col-8">
-                        <input type="password" name="password" id="password" class="form-control">
+                        <input type="password" name="password" id="password" class="form-control" placeholder="password">
                     </div>
                 </div>
 
