--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -9,6 +9,9 @@
                 <div class="col">
                     <a href="/" class="btn btn-primary">index</a>
                 </div>
+                <div class="col">
+                    <a href="/stock/create" class="btn btn-primary">Create User</a>
+                </div>
             </div>
             <div class="row">
                 <label class="fs-4">Search data:</label>
