--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -8,6 +8,8 @@
             <div class="row my-1">
                 <div class="col">
                     <a href="/" class="btn btn-primary">index</a>
+                </div>
+                <div class="col">
                     <a href="/users/create" class="btn btn-primary">Create User</a>
                 </div>
             </div>
@@ -37,7 +39,10 @@
                             <label for="role">Role:</label>
                         </div>
                         <div class="col-10">
-                            <input type="text" id="role" name="role" class="form-control" placeholder="Role">
+                            <% for(role of roles){ %>
+                                <input type="radio" id="<%=role.display_name %>" name="role" value="<%= role.value %>">
+                                <label for="<%= role.display_name %>"><%= role.display_name %></label><br>
+                            <% } %>
                         </div>
                     </div>
 
