--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -73,6 +73,11 @@
                     edit
                 </div>
             </div>
+            <% if(datas == []){ %>
+                <div class="row py-1 border-bottom border-dark text-center">
+                    <label>Not have user</label>
+                </div>
+            <% } %>
             <% for(data of datas){ %>
                 <div class="row py-1 border-bottom border-dark">
                     <div class="col text-center">
