--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -64,7 +64,7 @@
                     edit
                 </div>
             </div>
-            <% if(datas == []){ %>
+            <% if(datas.length == 0){ %>
                 <div class="row py-1 border-bottom border-dark text-center">
                     <label>Not have user</label>
                 </div>
