--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -6,6 +6,11 @@
     <title>Stock Enquiry</title>
 </head>
 <body>
+    <div class="row my-1">
+        <div class="col">
+            <a href="/stock" class="btn btn-primary">stock list</a>
+        </div>
+    </div>
     <h1>Stock Location Enquiry</h1>
     <form action="/stock/save" method="post">
         <input type="text" name="_id" value="<%= stock_data._id %>" hidden>
