--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -10,7 +10,7 @@
                     <a href="/" class="btn btn-primary">index</a>
                 </div>
                 <div class="col">
-                    <a href="/stock/create" class="btn btn-primary">Create User</a>
+                    <a href="/stock/create" class="btn btn-primary">Create Stock</a>
                 </div>
             </div>
             <div class="row">
@@ -75,7 +75,7 @@
             </div>
             <% if(datas.length == 0){ %>
                 <div class="row py-1 border-bottom border-dark text-center">
-                    <label>Not have user</label>
+                    <label>Not have stocks</label>
                 </div>
             <% } %>
             <% for(data of datas){ %>
