--- a/views/deliveryOrder/index.ejs
+++ b/views/deliveryOrder/index.ejs
@@ -5,7 +5,15 @@
     </head>
     <body>
         <div class="container">
-            <a href="/" class="btn btn-primary">index</a>
+            <div class="row my-1">
+                <div class="col">
+                    <a href="/" class="btn btn-primary">index</a>
+                </div>
+                <div class="col">
+                    <a href="/deliveryOrder/create" class="btn btn-primary">Create Delivery Order</a>
+                </div>
+            </div>
+
             <div class="row">
                 <label class="fs-4">Search data:</label>
                 <form action="/deliveryOrder" method="get" class="border m-1">
@@ -62,7 +70,7 @@
             </div>
             <% if(datas.length == 0){ %>
                 <div class="row py-1 border-bottom border-dark text-center">
-                    <label>Not have user</label>
+                    <label>Not have Delivery Order</label>
                 </div>
             <% } %>
             <% for(data of datas){ %>
